# geniza

./: .all-contributorsrc  .babelrc  .browserslistrc  .buildinfo  .git-blame-ignore-revs  .gitignore  .percy.yml  .pre-commit-config.yaml  .prettierrc.yaml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTORS.md  DEPLOYNOTES.md  DEVNOTES.rst  LICENSE  README.md  README.rst  architecture.html  changelog.html  crowdin.yml  devnotes.html  genindex.html  geniza.wsgi  index.html  index_geniza.py  lighthouserc.js  manage.py  missing_people.csv  missing_places.csv  ner.ipynb  objects.inv  package-lock.json  package.json  pgp_authors.csv  pgp_editors.csv  pgp_places.csv  py-modindex.html  pyproject.toml  (+5 more)
.github/workflows/: codeql-analysis.yml  dbdocs.yml  flask_test.yml  lighthouse.yml  sphinx_docs.yml  tests.yml  unit_tests.yml  visual_tests.yml
_modules/: index.html
_modules/geniza/annotations/: models.html  views.html
_modules/geniza/common/: fields.html  metadata_export.html  middleware.html  models.html
_modules/geniza/corpus/: dates.html  metadata_export.html  models.html  views.html
_modules/geniza/footnotes/: models.html
_modules/geniza/pages/: models.html
_sources/codedocs/: corpus.rst.txt  pages.rst.txt
_static/: documentation_options.js
codedocs/: annotations.html  common.html  corpus.html  footnotes.html  index.html  pages.html
docs/: architecture.rst  conf.py  index.rst
docs/_templates/: sidebar_footer.html
docs/codedocs/: annotations.rst  common.rst  corpus.rst  footnotes.rst  index.rst
geniza/: __init__.py  admin.py  apps.py  asgi.py  conftest.py  context_processors.py  local_settings.py.sample  settings.py  urls.py  views.py  wsgi.py
geniza/annotations/: __init__.py  admin.py  apps.py  conftest.py  models.py  signals.py  urls.py  views.py
geniza/annotations/migrations/: 0001_initial.py  0002_annotation_footnote.py  0003_associate_related_footnotes.py  0004_alter_annotation_footnote.py  0005_annotation_cleanup_nbsp.py  0006_annotation_block.py
geniza/annotations/tests/: test_annotations_admin.py  test_annotations_migrations.py  test_annotations_models.py  test_annotations_signals.py  test_annotations_views.py
geniza/common/: __init__.py  admin.py  apps.py  fields.py  metadata_export.py  middleware.py  models.py  signals.py  solr.py  tests.py  urls.py  utils.py  views.py
geniza/common/migrations/: 0001_content_editor_group.py  0001_data_editor_group.py  0002_create_script_user.py  0003_user_admin_group.py  0004_document_fragment_permissions.py  0005_create_staff_user.py  0005_create_team_user.py  0006_add_document_delete_permissions.py  0006_script_user_api_user.py  0006_userprofile.py  0007_link_users_to_creators.py  0008_preload_github_coauthors.py  0009_install_unaccent.py
geniza/corpus/: __init__.py  admin.py  annotation_export.py  annotation_utils.py  apps.py  csv_export.py  dates.py  forms.py  iiif_utils.py  ja.py  metadata_export.py  models.py  resource.py  sitemaps.py  solr_queryset.py  tei_transcriptions.py  tests.py  translation.py  uris.py  urls.py  views.py
geniza/corpus/fixtures/: historic_users.json  test_documents.json  ui_ux_test_documents.json
geniza/corpus/management/: lastrun_command.py
geniza/corpus/migrations/: 0001_create_collection_languagescript.py  0001_create_library_languagescript.py  0001_initial.py  0002_collection_abbrev_caseinsensitive_uniq.py  0002_create_document_fragment.py  0002_create_languagescript.py  0003_revise_collections.py  0003_tags_optional.py  0004_adjust_multifragment.py  0005_add_suppressed_docs.py  0006_document_needs_review.py  0007_fragment_needs_review.py  0008_update_shelfmark_helptext.py  0009_document_ordering_collection_meta.py  0010_remove_old_inputby_date.py  0011_add_textblock_certainty.py  0011_auto_20210426_1612.py  0012_region_subfragment.py  0013_document_old_pgpid.py  0013_document_old_pgpids.py  0014_rename_multifragment.py  0015_add_document_date.py  0024_fragment_manifest.py  (+46 more)
geniza/docs/: admin.py  models.py  tests.py
geniza/entities/: __init__.py  admin.py  apps.py  conftest.py  forms.py  metadata_export.py  models.py  translation.py  urls.py  views.py
geniza/footnotes/: __init__.py  admin.py  apps.py  conftest.py  forms.py  metadata_export.py  models.py  tests.py  translation.py  utils.py
geniza/pages/: admin.py  apps.py  image_formats.py  models.py  translation.py  wagtail_hooks.py
geniza/people/: admin.py  models.py  tests.py  translation.py  urls.py  views.py
geniza/resources/: __init__.py  admin.py  apps.py  models.py
geniza/scripts/: 04word2vec.py  ldamallet.py  stopwords.txt  utils.py
geniza/settings/: __init__.py  local_settings.py.sample
geniza/templates/: 404.html  500.html  base.html  footer.html  home.html  nav.html  robots.txt  solr_error.html
geniza/tests/: test_admin.py
hooks/: pre-commit
requirements/: dev.txt  docs.txt  prod.txt  scripts.txt  test.txt
scripts/: README.md  __init__.py  bodleian_iiif.py  count_transcriptions.bash  gen_ptiffs.py  index.py  index_geniza.py  jrl_crawl_iiif.py  jrl_iiif.py  local_settings.cfg  local_settings.cfg.sample  local_settings.py.sample  manifests_to_csv.py  requirements.txt  scripts_requirements.txt  server.py  tei_transcriptions.py  tile_images.py
scripts/templates/: base.html  cluster_result.html  clusters.html  iiif_viewer.html  incipit_form.html  index.html  results.html  search_form.html
sitemedia/: fonts.zip.gpg  site.webmanifest  webpack-stats-ci.json  webpack-stats.json
sitemedia/bundles/: main-4a2244ea28f99ebcc07c.min.js  main-87bdd33e5b7b01e725c2.min.css
sitemedia/css/: admin-local.css  deque-patterns.min.css  style.css  test-banner.css
sitemedia/img/: README.rst
sitemedia/js/: admin.js  annotation.js  deque-patterns.min.js  iiif.js  main.js  openseadragon.js  relevance.js  search.js  sort-select.js  stimulus_app.js  submenu.js  theme-toggle.js  viewer.js
sitemedia/scss/: annotation.scss  iiif.scss  main.scss
solr_conf/conf/: managed-schema  params.json  solrconfig.xml
static/: style.css
templates/: base.html  home.html
tests/: test_server.py
(+403 files in other folders)
