[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geniza"
description = "Cairo Geniza - Python/Django web application"
requires-python = ">=3.9"
license = { text = "Apache-2" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "django>=4.0,<4.1",
    #"django>=3.2,<4.0",
    "attrdict",
    "psycopg2-binary",
    "pucas>=0.6",
    "django-split-settings",
    "requests",
    #"django-taggit>=1.5.1,<2.0",
    "django-taggit>=2.0,<3.0",
    "piffle>=0.6",
#    "taggit-selectize",
    "taggit-selectize>=2.11.0",
    # NOTE: as of 2024-07-91, django-multiselectfield 0.1.13 causes an error in unit"
    # tests and loaddata for loading fixtures"
    "django-multiselectfield==0.1.12",
    # NOTE: as of 2022-04-29, modeltranslation v0.17.6 causes an error in Django admin
    # TypeError: Cannot use multi-field values as a filter value.
#    "django-modeltranslation==0.17.5",
    "django-modeltranslation>=0.18.4",
    "django-admin-sortable2==1.0.4",
    "python-dateutil>=2.8",
    "django-tabular-export",
    "parasolr>=0.9.1",
    "django-gfklookupwidget",
    "django-adminlogentries",
#    "django-autocomplete-light>=3.11.0",
    "django-autocomplete-light>=3.9.7",
    "django-webpack-loader",
    "django-csp",
    "gitpython",
    "eulxml",
    "rich",
#    "wagtail>=2.15.3,<2.16",
    "wagtail>=2.16.2,<3.0",
    "wagtail-localize",
#    "rdflib<6.2",
    "rdflib>=7.0",
    "djiffy>=1.0",
    "natsort",
    "django-widget-tweaks",
    "django-csp-helpers",
    "django-fullurl",
    "django-admin-inline-paginator",
    "convertdate",
    "unidecode",
    "addict",
    "beautifulsoup4",
    "bleach",
    "python-slugify"
]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["geniza"]

[tool.setuptools.dynamic]
version = { attr = "geniza.__version__" }
readme = { file = ["README.rst"] }

[project.optional-dependencies]
dev = [
    "sphinx",
    "pytest>=4.6",# required for pytest-cov
    "pytest-django>=4.1.0,<4.5.0",
    "pytest-cov",
    "pytest-order",
    "wheel",
    "django-dbml==0.7.0",
    "percy-selenium>=2.1.1",
    "selenium>=4.8.0",
    "django-fixture-magic",
    "future",
    "google-api-python-client",
    "google_auth_oauthlib",
    "django-debug-toolbar",
    "pre-commit",
    "black"
]
test = [
    "pytest>=4.6",# required for pytest-cov
    "pytest-django>=4.1.0,<4.5.0",
    "pytest-cov",
    "pytest-order",
    "wheel",
    "django-dbml==0.7.0",
    "percy-selenium>=2.1.1",
    "selenium>=4.8.0",
    "django-fixture-magic"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "geniza.settings"
# look for tests in standard django test location
python_files = ["geniza/**/tests.py", "geniza/**/tests/*.py"]
testpaths = "geniza"
markers = ["last", "second_to_last"]


[tool.black]
line-length = 88
target-version = ['py39']
# include = ''
# extend-exclude = ''