[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geniza"
description = "Cairo Geniza - Python/Django web application"
requires-python = ">=3.12"
license = { text = "Apache-2" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "django>=5.2,<5.3",
    "psycopg2-binary",
    "pucas>=0.6",
    "django-split-settings",
    "requests",
    "django-taggit>=6.0.0,<7.0",
    "piffle>=0.6,<0.7",
    "django-multiselectfield>=1.0,<2.0",
    "django-modeltranslation>=0.19.15,<0.20",
    "django-admin-sortable2>=2.2.8,<2.3",
    "python-dateutil>=2.8",
    "django-tabular-export",
    "parasolr>=0.9.1",
    "django-gfklookupwidget",
    "django-adminlogentries",
    "django-autocomplete-light>=3.12,<3.13",
    "django-webpack-loader",
    "django-csp",
    "gitpython",
    "neuxml",
    "rich",
    "wagtail>=7.0,<8",
    "wagtail-localize>=1.12,<1.13",
    "djiffy>=1.0.1,<1.1",
    "natsort",
    "django-widget-tweaks",
    "django-csp-helpers",
    "django-fullurl",
    "django-admin-inline-paginator",
    "convertdate",
    "unidecode",
    "addict",
    "beautifulsoup4",
    "bleach",
    "python-slugify",
    "nltk"
]
dynamic = ["version", "readme"]

[tool.setuptools]
packages = ["geniza"]

[tool.setuptools.dynamic]
version = { attr = "geniza.__version__" }
readme = { file = ["README.rst"] }

[project.optional-dependencies]
dev = [
    "sphinx",
    "pytest>=4.6",# required for pytest-cov
    "pytest-django>=4.1.0,<4.5.0",
    "pytest-cov",
    "pytest-order",
    "wheel",
    "django-dbml==0.7.0",
    "selenium>=4.8.0",
    "django-fixture-magic",
    "future",
    "google-api-python-client",
    "google_auth_oauthlib",
    "django-debug-toolbar",
    "pre-commit",
    "black"
]
test = [
    "pytest>=4.6",# required for pytest-cov
    "pytest-django>=4.1.0,<4.5.0",
    "pytest-cov",
    "pytest-order",
    "wheel",
    "django-dbml==0.7.0",
    "selenium>=4.8.0",
    "django-fixture-magic"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "geniza.settings"
# look for tests in standard django test location
python_files = ["geniza/**/tests.py", "geniza/**/tests/*.py"]
testpaths = "geniza"
markers = ["last", "second_to_last"]


[tool.black]
line-length = 88
target-version = ['py312']
# include = ''
# extend-exclude = ''